@@ -1,7 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.537 2009-06-12 02:09:49 remko Exp $
+	$Id: ChangeLog,v 1.538 2009-06-15 18:15:34 guru Exp $
 -----------------------------------------------------------------------------------------
 
+2009-06-15	pwessel
+	* gmt_init.c:		Allow negative integer interval (-n) for annotating log axis; this means
+				annotate every n'th power of 10.
+				
 2009-06-11	remko
 	* gmt_nc.c:		No longer write node_offset = 0 to file (not essential, only confusing).
 	* gmt_grdio.c:		GMT_grd_setregion now includes "interpolant" argument: this ensures
